--- a/.github/workflows/tests-orders.yml
+++ b/.github/workflows/tests-orders.yml
@@ -1,4 +1,4 @@
-name: tests
+name: tests-orders
 
 # Controls when the workflow will run
 on:
@@ -17,4 +17,4 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       # Runs a single command using the runners shell
-      - run: cd auth && npm install && npm run test:ci
+      - run: cd orders && npm install && npm run test:ci
