--- a/.github/workflows/tests-auth.yml
+++ b/.github/workflows/tests-auth.yml
@@ -3,7 +3,9 @@ name: tests-auth
 # Controls when the workflow will run
 on:
   # Trigger the workflow on pull request event
-  pull_request
+  pull_request:
+    paths:
+      - 'auth/**'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
